media queries added

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
       crossorigin="anonymous"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Portfolio | Eden Baui</title>
   </head>
   <body>
     <noscript>
