--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
+
+    <!-- custom style -->
+    <link rel="stylesheet" type="text/css" href="./main.css" id="dark-theme" />
+    <!-- custom style -->
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
@@ -22,7 +26,7 @@
         continue.</strong
       >
     </noscript>
-    <div id="app"></div>
+    <div id="app" class="dark-theme"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
