--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>CHANGE THIS TO YOUR TITLE</title>
+    <title>Portfolio | Eden Baui</title>
     <script type="text/javascript">
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
