create a css folder, modify project , change icon

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <link rel="shortcut icon" href="../src/assets/icon.png" />
 
     <!-- custom style -->
-    <link rel="stylesheet" type="text/css" href="./main.css" id="dark-theme" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./css/main.css"
+      id="dark-theme"
+    />
     <!-- custom style -->
 
     <link
